--- a/01-foundation/package.json
+++ b/01-foundation/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.7",
     "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
+    "astro": "^4.16.7",
+    "mongoose": "^8.7.3",
+    "typescript": "^5.6.3",
+    "zod": "^3.23.8"
   }
 }
