--- a/01-foundation/package.json
+++ b/01-foundation/package.json
@@ -14,6 +14,7 @@
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "astro": "^4.16.7",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
