--- a/01-foundation/package.json
+++ b/01-foundation/package.json
@@ -18,6 +18,8 @@
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "graphql-yoga": "^5.8.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.0",
     "typescript": "^5.6.3"
   }
 }
