--- a/01-foundation/package.json
+++ b/01-foundation/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^8.3.4",
+    "@astrojs/vercel": "^7.8.2",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "astro": "^4.16.7",
@@ -20,6 +21,5 @@
     "mongoose": "^8.7.3",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
-  },
-  "devDependencies": {}
+  }
 }
