--- a/01-foundation/package.json
+++ b/01-foundation/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.11.8",
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^8.3.4",
+    "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.7",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
