--- a/01-foundation/trpc-server/package.json
+++ b/01-foundation/trpc-server/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "examples-minimal",
+  "name": "trpc-server",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev:server": "tsx watch src/server",
-    "dev:client": "wait-port 4321 && tsx watch src/client",
+    "dev:client": "wait-port 3000 && tsx watch src/client",
     "dev": "run-p dev:* --print-label",
-    "test-dev": "start-server-and-test 'tsx src/server' 4321 'tsx src/client'",
-    "test-start": "start-server-and-test 'node dist/server' 4321 'node dist/client'"
+    "serve:dev": "start-server-and-test 'tsx src/server' 3000 'tsx src/client'",
+    "serve:prod": "start-server-and-test 'node dist/server' 3000 'node dist/client'"
   },
   "dependencies": {
     "@trpc/client": "npm:@trpc/client@next",
     "@trpc/server": "npm:@trpc/server@next",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^20.17.3",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^1.12.0",
