--- a/01-foundation/trpc-server/package.json
+++ b/01-foundation/trpc-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@trpc/client": "npm:@trpc/client@next",
     "@trpc/server": "npm:@trpc/server@next",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
@@ -19,6 +20,7 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^20.17.3",
     "npm-run-all": "^4.1.5",
